# fastapi-redis-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/skills/redis-fastapi/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml  stale-issues.yml
docs/: index.md
docs/api/: configuration.md  reference.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: architecture.md  benchmarks.md  caching.md  configuration.md
docs/specs/: ARCHITECTURE.md  CACHE_INTERCEPTION_POINTS.md  CACHE_METRICS_SPEC.md  CACHE_TAGS_SPEC.md  CACHING_COMPARISON.md  CACHING_INTERNALS.md  CODE_REVIEW.md  DECORATOR_VS_DI_RESEARCH.md  DISTRIBUTED_INVALIDATION_SPEC.md  DOCUMENTATION_VERIFICATION.md  FEATURE_ROADMAP.md  INTEGRATION_TEST_SCENARIOS.md  MISSING_FEATURES_ANALYSIS.md  OPENAPI_CACHE_RESEARCH.md  OPENTELEMETRY_SPEC.md  PATTERN_CLEARING_SPEC.md  PATTERN_COMPARISON_TABLE.md  PERFORMANCE_OPTIMIZATIONS.md  PYDANTIC_SETTINGS_ANALYSIS.md
docs/stylesheets/: extra.css
examples/: README.md  main.py
src/redis_fastapi/: __init__.py  cache.py  cache_backend.py  config.py  deps.py  lifespan.py  setup.py  telemetry.py  types.py
tests/: conftest.py
tests/integration/: test_cache_backend.py  test_cache_invalidation.py  test_cache_key_builder.py  test_cache_patterns.py  test_cache_semantics.py  test_lifespan.py  test_ttl_expiry.py
tests/unit/: test_adversarial.py  test_cache.py  test_coder.py  test_config.py  test_deps.py  test_key_builder.py  test_lifespan_otel.py  test_otel_cache.py  test_telemetry.py
